// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test azure-db commands createDb snapshot 1`] = `
Object {
  "apiVersion": "batch/v1",
  "kind": "Job",
  "metadata": Object {
    "name": "sre-tools-create-db-job-50000",
    "namespace": "namespace-1",
  },
  "spec": Object {
    "backoffLimit": 0,
    "template": Object {
      "spec": Object {
        "containers": Array [
          Object {
            "command": Array [
              "create-db-user",
            ],
            "env": Array [
              Object {
                "name": "NEW_DB_NAME",
                "value": "database-1",
              },
              Object {
                "name": "NEW_USER",
                "value": "user-1",
              },
              Object {
                "name": "NEW_PASSWORD",
                "value": "password-1",
              },
              Object {
                "name": "NEW_DB_EXTENSIONS",
                "value": "hstore pgcrypto citext",
              },
            ],
            "envFrom": Array [
              Object {
                "secretRef": Object {
                  "name": "azure-pg-admin-user",
                },
              },
            ],
            "image": "registry.gitlab.factory.social.gouv.fr/socialgouv/docker/azure-db:2.1.0",
            "imagePullPolicy": "IfNotPresent",
            "name": "create-db-user",
            "resources": Object {
              "limits": Object {
                "cpu": "300m",
                "memory": "256Mi",
              },
              "requests": Object {
                "cpu": "100m",
                "memory": "64Mi",
              },
            },
          },
        ],
        "restartPolicy": "Never",
      },
    },
    "ttlSecondsAfterFinished": 86400,
  },
}
`;

exports[`Test azure-db commands dropDb snapshot 1`] = `
Object {
  "apiVersion": "batch/v1",
  "kind": "Job",
  "metadata": Object {
    "name": "sre-tools-drop-db-job-50000",
    "namespace": "namespace-2",
  },
  "spec": Object {
    "backoffLimit": 0,
    "template": Object {
      "metadata": Object {},
      "spec": Object {
        "containers": Array [
          Object {
            "command": Array [
              "drop-db-user",
            ],
            "env": Array [
              Object {
                "name": "DROP_DATABASE",
                "value": "database-2",
              },
              Object {
                "name": "DROP_USER",
                "value": "user-2",
              },
            ],
            "envFrom": Array [
              Object {
                "secretRef": Object {
                  "name": "azure-pg-admin-user",
                },
              },
            ],
            "image": "registry.gitlab.factory.social.gouv.fr/socialgouv/docker/azure-db:2.1.0",
            "imagePullPolicy": "IfNotPresent",
            "name": "drop-db-user",
            "resources": Object {
              "limits": Object {
                "cpu": "300m",
                "memory": "256Mi",
              },
              "requests": Object {
                "cpu": "100m",
                "memory": "64Mi",
              },
            },
          },
        ],
        "restartPolicy": "Never",
      },
    },
  },
}
`;
